--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -10,11 +10,9 @@ body {
 header {
     background-color: #fff;
     padding: 5px 100px;
-/*    margin: 0 25px 0 0;
-    border-width: 0 1px 1px 0; 
-    border-radius: 0 0 25px 0;
-    border-style: solid;
-    border-color: black; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 main {
@@ -28,10 +26,13 @@ h1 {
     font-size: 64px;
     margin: 0;
     font-weight: normal;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 h2 {
-    color: #0077DD;
+ /*   color: #0077DD; */
     font-size: 20px;
     font-weight: normal;
 }
@@ -103,13 +104,6 @@ button:hover, button:active {
   width: 16.25%;
 }
 
-/*
-.column,
-.columns {
-  margin-left: 0.5%;
-}
-*/
-
 .pretty_container {
   border-radius: 5px;
   background-color: #f9f9f9;
@@ -155,11 +149,11 @@ button:hover, button:active {
 .box_summary{
   border-radius: 0px;
   background-color: #F9F9F8;
-  border: 1px solid #8BC8FF;
+  border: 0px solid #8BC8FF;
   margin: 30px;
   justify-content: center;
   width: 18%;
-  height: 100%;
+  height: 60%;
   text-align: center;
 }
 
