--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -22,10 +22,10 @@ main {
 
 h1 {
     color: #0000AA;
-    font-family: 'Grenze Gotisch', 'serif';
-    font-size: 64px;
+    font-family: 'Montserrat', 'serif';
+    font-size: 48px;
     margin: 0;
-    font-weight: normal;
+    font-weight: bold;
     display: flex;
     justify-content: center;
     align-items: center;
